# Stakeboard-Study-Group-Commitment-Tracker-on-Stellar-Soroban

./: Cargo.toml  README.md  vercel.json
.github/workflows/: ci.yml  deploy.yml  deploy_frontend.yml
contracts/attendance/: Cargo.toml
contracts/attendance/src/: lib.rs  test.rs
contracts/cohort/: Cargo.toml
contracts/cohort/src/: lib.rs  test.rs
docs/: DEMO_SCRIPT.md  SCREENSHOT_CHECKLIST.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CheckInPanel.jsx  CohortLookup.jsx  CreateCohortForm.jsx  EventFeed.jsx  Hero.jsx  NavBar.jsx  Skeleton.jsx  SyllabusBoard.jsx
frontend/src/contracts/: cohortClient.js  config.js
frontend/src/hooks/: useContractEvents.js  useWallet.js
frontend/src/test/: CreateCohortForm.test.jsx  SyllabusBoard.test.jsx
scripts/: deploy.sh  sample_interaction.sh
